// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GeoSearch expect to render 1`] = `"<div class=\\"ais-GeoSearch\\"><div class=\\"ais-GeoSearch-map\\"></div><div class=\\"ais-GeoSearch-tree\\"></div></div>"`;

exports[`GeoSearch expect to render 2`] = `
Array [
  <GeoSearchControls
    cssClasses={
      Object {
        "control": "ais-GeoSearch-control",
        "input": "ais-GeoSearch-input",
        "label": "ais-GeoSearch-label",
        "labelSelected": "ais-GeoSearch-label--selected",
        "map": "ais-GeoSearch-map",
        "redo": "ais-GeoSearch-redo",
        "redoDisabled": "ais-GeoSearch-redo--disabled",
        "reset": "ais-GeoSearch-reset",
        "root": "ais-GeoSearch",
        "tree": "ais-GeoSearch-tree",
      }
    }
    enableClearMapRefinement={true}
    enableRefineControl={true}
    hasMapMoveSinceLastRefine={false}
    isRefineOnMapMove={true}
    isRefinedWithMap={false}
    onClearClick={[Function]}
    onRefineClick={[Function]}
    onRefineToggle={[Function]}
    templateProps={
      Object {
        "templates": Object {
          "clear": "Clear the map refinement",
          "redo": "Redo search here",
          "toggle": "Search as I move the map",
        },
        "templatesConfig": undefined,
        "transformData": undefined,
        "useCustomCompileOptions": Object {
          "clear": true,
          "redo": true,
          "toggle": true,
        },
      }
    }
  />,
  <div
    class="ais-GeoSearch-tree"
  />,
]
`;

exports[`GeoSearch expect to render with custom classNames 1`] = `"<div class=\\"ais-GeoSearch custom-root\\"><div class=\\"ais-GeoSearch-map custom-map\\"></div><div class=\\"ais-GeoSearch-tree\\"></div></div>"`;

exports[`GeoSearch expect to render with custom classNames 2`] = `
Array [
  <GeoSearchControls
    cssClasses={
      Object {
        "control": "ais-GeoSearch-control custom-control",
        "input": "ais-GeoSearch-input custom-input",
        "label": "ais-GeoSearch-label custom-label",
        "labelSelected": "ais-GeoSearch-label--selected custom-label-selected",
        "map": "ais-GeoSearch-map custom-map",
        "redo": "ais-GeoSearch-redo custom-redo",
        "redoDisabled": "ais-GeoSearch-redo--disabled custom-redo-disabled",
        "reset": "ais-GeoSearch-reset custom-reset",
        "root": "ais-GeoSearch custom-root",
        "tree": "ais-GeoSearch-tree",
      }
    }
    enableClearMapRefinement={true}
    enableRefineControl={true}
    hasMapMoveSinceLastRefine={false}
    isRefineOnMapMove={true}
    isRefinedWithMap={false}
    onClearClick={[Function]}
    onRefineClick={[Function]}
    onRefineToggle={[Function]}
    templateProps={
      Object {
        "templates": Object {
          "clear": "Clear the map refinement",
          "redo": "Redo search here",
          "toggle": "Search as I move the map",
        },
        "templatesConfig": undefined,
        "transformData": undefined,
        "useCustomCompileOptions": Object {
          "clear": true,
          "redo": true,
          "toggle": true,
        },
      }
    }
  />,
  <div
    class="ais-GeoSearch-tree"
  />,
]
`;
